# data-science

.devcontainer/: devcontainer.json
hw-04/: Hw1.1.ipynb  Hw1.2.ipynb
hw-05/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  python_data.csv
hw-06/: Hw3.1.ipynb
hw-07/: Hw4.1.ipynb
hw-08/: Hw5.1.ipynb
hw-09/: Hw6.1.ipynb
hw-10/: Hw7.1.ipynb  Домашнє_завдання_Module_7.ipynb
hw-11/: GoIT_HW_8_new.ipynb  Hw8.1.ipynb
hw-12/: Hw9.1.ipynb
hw-13/: Hw10.1.ipynb
hw-14/: Hw11.1.ipynb
hw-15/: Hw12.1.ipynb
hw-16/: README.md  VGG16_training_history.json  app.py  cnn_model.keras  cnn_training_history.json  pyproject.toml
