[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["shulika-w <shulika.w@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.19.0"
numpy = ">=2.1.0,<3.0.0"
streamlit = "^1.45.1"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
gdown = "^5.2.0"
pillow = "^11.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"